[package]
name = "UploadDemo"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
indicatif = "0.16.2"
clap = { version = "3.1.0", features = ["cargo"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
rayon = "1.5.1"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
futures-util = "0.3.21"
futures = "0.3.21"

[workspace]
members = ["src/cli", "src/server"]

[[bin]]
name = "upload-server"
path = "src/server/src/main.rs"

[[bin]]
name = "upload-client"
path = "src/cli/src/main.rs"
