[package]
name = "upload-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
futures-util = "0.3.21"
futures = "0.3.21"

[[bin]]
name = "upload-server"
path = "src/main.rs"
